github_data_collector/src/data/issue_comment/lise-henry_crowbook.txt
### Version
0.15.0 (cargo) / 0.15.1 (git)
### Target
pdf/tex
### Steps to reproduce
 ```bash
crowbook -s test.md -o test.pdf --to pdf --verbose
```
##### test.md
```markdown
Text

> ##### H5
> Text

Text
```
### Error
LaTeX fails with on `\mdblockquote`
```
! LaTeX Error: Something's wrong--perhaps a missing \item.
```
### Reasoning
According to [this issue](https://github.com/latex3/latex2e/issues/248), using `\paragraph` (and other structure related elements) inside `\quotation` is incorrect and weird errors here are fine.
### Real world example
[rust-lang/book: src/ch03-02-data-types.md#L101](https://github.com/rust-lang/book/blame/6598d3abac05ed1d0c45db92466ea49346d05e40/src/ch03-02-data-types.md#L101)

Page numbers are offset in TOC by `-10`.

<details>
<summary>Image 1 (click to reveal)</summary>
<img width="513" alt="image" src="https://user-images.githubusercontent.com/8577450/71547576-17dcab80-29a2-11ea-832a-62d7a57ffc98.png">
</details>

<details>
<summary>Image 2 (click to reveal)</summary>
<img width="685" alt="image" src="https://user-images.githubusercontent.com/8577450/71547587-3b9ff180-29a2-11ea-9f5f-d921ae078000.png">
</details>

Side note: Although the images here show the use of a custom LaTeX template, I can reproduce this with the LaTeX template shipping with `crowbook`.


```yaml
XeTeX    : 3.14159265-2.6-0.999991 (TeX Live 2019)
crowbook : v0.15.0
OS       : macOS Catalina 10.15.2 (19C57)
hardware : MBP 15" 2018, i9 2.9GHz, 32GB, 1TB, Radeon Pro 560X
```
When adding:

```latex
\usepackage[
  usenames,
  dvipsnames,
  svgnames
]{xcolor}
```

to the `template.tex` and changing the appearance of inline code in md to:

```diff
- \newcommand\mdcode[1]{\texttt{#1}}
+ \newcommand\mdcode[1]{\texttt{\color{Red!33!Black} #1}}
```

Bookmarks are messed up as follows:

<img width="758" alt="image" src="https://user-images.githubusercontent.com/8577450/71299566-3b926700-238e-11ea-9c24-5c26a237917f.png">

when using a header in your markdown source like:

```text
...

## Restricted `begin_edit()` and `end_edit()`

...
```

---

```yaml
XeTeX    : 3.14159265-2.6-0.999991 (TeX Live 2019)
crowbook : v0.15.0
OS       : macOS Catalina 10.15.2 (19C57)
hardware : MBP 15" 2018, i9 2.9GHz, 32GB, 1TB, Radeon Pro 560X
```
Currently, I am unable to build binaries for other targets than Linux. In the past, I used trust to build and deploy binaries using Travis and Appveyor but I have been unable/incompetent to do it for the past few releases.

So if someone understands these platforms better than me (that's not hard ^^) and has any idea how to fix the appveyor.yml/.travis.yml files and/or what I need to do on these sites I'd be more than happy :)

Logs on travis (it doesn't even build there anymore because of syntect?) : https://travis-ci.org/lise-henry/crowbook
Logs on appveyor: https://ci.appveyor.com/project/lise-henry/crowbook (here it builds correctly but i am incapable of deploying: https://ci.appveyor.com/project/lise-henry/crowbook/deployment/2575742) 
Maybe it would make sense to change the header style in the latex output to:


```latex
% Redefine headers
\pagestyle{fancy}
\renewcommand{\chaptermark}[1]{\markboth{\sffamily\normalsize\bfseries\thechapter.\ #1}{}}
\renewcommand{\sectionmark}[1]{\markright{\sffamily\normalsize\thesection\ #1}{}}
\fancyhf{}
\fancyhead[LE,RO]{\sffamily\normalsize\thepage}
\fancyhead[LO]{\rightmark}
\fancyhead[RE]{\leftmark}
\renewcommand{\headrulewidth}{0.5pt}
\addtolength{\headheight}{2.5pt}
\renewcommand{\footrulewidth}{0pt}
\fancyfoot{}
```

looks like this:

<img width="1217" alt="image" src="https://user-images.githubusercontent.com/8577450/70740992-b0282e80-1d1a-11ea-960f-1c965688e8e5.png">

Not really an issue, but more a lot of issues with the ODT output, which has totally fallen behind and I am not able to maintain. I am thinking of dropping it for the time being, particularly since copy/pasting HTML output into LibreOffice probably gives some better result. But am open to some feedback, is anybody actually using this feature? 
Steps to repeat

```
$ rustc -V
rustc 1.29.0 (aa3ca1994 2018-09-11)
$ cargo new cooktest
$ cd cooktest
$ vim Cargo.toml
....
```
append
```
[dependencies]
crowbook = {version = "0.11", default-features = false}
```
Then build
```
$ cargo build
```
Eventually I get:
```
   Compiling crowbook v0.11.4
error[E0432]: unresolved import `text_view`
  --> /home/paul/.cargo/registry/src/github.com-1ecc6299db9ec823/crowbook-0.11.4/src/lib/html_dir.rs:28:5
   |
28 | use text_view::view_as_text;
   |     ^^^^^^^^^ Maybe a missing `extern crate text_view;`?

error[E0432]: unresolved import `text_view`
  --> /home/paul/.cargo/registry/src/github.com-1ecc6299db9ec823/crowbook-0.11.4/src/lib/book.rs:37:5
   |
37 | use text_view::view_as_text;
   |     ^^^^^^^^^ Maybe a missing `extern crate text_view;`?

error[E0432]: unresolved import `text_view`
  --> /home/paul/.cargo/registry/src/github.com-1ecc6299db9ec823/crowbook-0.11.4/src/lib/epub.rs:29:5
   |
29 | use text_view::view_as_text;
   |     ^^^^^^^^^ Maybe a missing `extern crate text_view;`?

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0432`.
error: Could not compile `crowbook`.

To learn more, run the command again with --verbose.
```

I don't think verbose provides any further useful information other than the rust command used to compile.  I can add if you think it's worth it.
output: [html.dir]

will generate an enpty "output_html" directory and an "auto" directory containing the actual output.
Is possible to have an output file with the txt format?
My concern is to be able to use the application for wiki text like wikipedia or https://doc.ubuntu-fr.org